# LinkChat-SecureCore

./: Cargo.toml  LICENSE  README.md  README_CN.md
secure_core/: Cargo.toml
secure_core/src/: anti_dos.rs  clock_align.rs  constant_flow.rs  disk_wipe.rs  evolution.rs  init_module.rs  lib.rs  memory_protection.rs  message_cipher.rs  root_state.rs  tail_padding.rs  virtual_volume.rs
